# Musher

./: .buildinfo  .clang-format  .gitignore  .gitmodules  .pylintrc  .travis.yml  AUTHORS  CMakeLists copy.txt  CMakeLists.txt  ChangeLog  LICENSE  MANIFEST.in  README.md  build_linux.sh  build_win.bat  conanfile.py  dev-requirements.txt  genindex.html  index.html  modules.html  musher_cpp.html  musher_library.dylib  musher_python.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_docs.txt  requirements_sdist.txt  search.html  searchindex.js  setup.cfg  setup.py  test_musher_cpp  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree  musher_cpp.doctree  musher_python.doctree
.github/workflows/: build_and_test.yml  build_test_and_deploy_py.yml
.vscode.copy/: c_cpp_properties.json  launch.json  settings.json  tasks.json
Musher/include/: song.h  song_core.h
Musher/src/: song_test.cpp  song_wrapper.cpp
_sources/: index.rst.txt  modules.rst.txt  musher_python.rst.txt
cmake/: base.cmake  compile-options.cmake  conan.cmake  executable.cmake  library.cmake  module.cmake  python.cmake  tests.cmake  utils.cmake
core/py_wrapper/: CMakeLists.txt  musher_wrapper.cpp
core/py_wrapper/include/: python_utils.h
dependencies/wavelib/: CMakeLists.txt
dependencies/wavelib/src/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile
docs/source/: conf.py  musher_cpp.rst  musher_python.rst
include/: functional_test.h  musher_core.h  musher_library.h  python_utils.h  utils.h
musher/: CMakeLists.txt  __init__.py
musher/core/: CMakeLists.txt  key.cpp  key.h  musher_library.cpp  musher_library.h  utils.cpp  utils.h
musher/core/test/: CMakeLists.txt  gtest_extras.h  test_framecutter.cpp  test_hpcp.cpp  test_key.cpp  test_musher_library.cpp  test_musher_utils.cpp  test_peak_detection.cpp  test_utils.h  utils.cpp  utils.h
musher/core/test/test_include/: test_load_audio_file.h
musher/example/: CMakeLists.txt  main.cpp
musher/python/: CMakeLists.txt  utils.cpp  utils.h  wrapper.cpp
poc/c++_extensions/: CMakeLists.txt
poc/c++_extensions/song/: CMakeLists.txt
poc/c++_extensions/song/include/: functional_test.h
poc/c++_extensions/song/src/: functional_test.cpp  song.cpp
poc/c++_extensions/song/wrapper/: setup.py  song.py  song_test.py
poc/python/: app.py
src/: CMakeLists.txt  FftComplex.cpp  functional_test.cpp  musher_library.cpp  musher_test.cpp  musher_test.py  musher_wrapper.cpp  python_utils.cpp  utils.cpp
src/core/: CMakeLists.txt  audio_decoders.cpp  audio_decoders.h  bpm.cpp  bpm.h  fft_convolve.cpp  fft_convolve.h  framecutter.cpp  framecutter.h  hpcp.cpp  hpcp.h  key.cpp  key.h  mono_mixer.cpp  mono_mixer.h  musher_library.cpp  musher_library.h  peak_detect.cpp  peak_detect.h  spectral_peaks.cpp  spectral_peaks.h  spectrum.cpp  spectrum.h  utils.cpp  utils.h  windowing.cpp  windowing.h
src/core/test/: CMakeLists.txt  test_audio_decoders.cpp  test_beat_detect.cpp  test_framecutter.cpp  test_hpcp.cpp  test_key.cpp  test_mono_mixer.cpp  test_musher_library.cpp  test_musher_utils.cpp  test_peak_detect.cpp  test_peak_detection.cpp  test_spectrum.cpp  test_windowing.cpp  utils.cpp  utils.h
src/core/test/test_include/: filedata.txt
src/python/: CMakeLists.txt  module.cpp  module_descriptions.h  utils.cpp  utils.h  wrapper.cpp  wrapper.h  wrapper_bind.cpp
test_package/: conanfile.py  test_package.cpp
tests/: CMakeLists.txt  conftest.py  gtest_extras.h  musher_test.py  test_audio_decoders.py  test_framecutter.cpp  test_framecutter.py  test_hpcp.cpp  test_hpcp.py  test_key.cpp  test_key.py  test_mono_mixer.py  test_musher.py  test_musher_cpp.cpp  test_musher_library.cpp  test_musher_utils.cpp  test_peak_detect.py  test_peak_detection.cpp  test_random.py  test_spectrum.py  test_utils.h  test_windowing.py
tests/test_include/: test_load_audio_file.h
tools/: .cibuildwheel.env  README.md  build-wheels.sh  buildTools.cmake  cibw-before-test.sh
travis/: build-wheels.sh
