[metadata]
# Version: pbr finds version from github tags
name = musher
author = Joshua Maldonado, Brian Silver
author-email = joshjm9915@gmail.com
summary = Simple musical key detection
# pbr will convert the README into a long description
description-file = README.md
description-content-type = text/markdown
url = https://github.com/jmaldon1/Musher
license = MIT
keywords = music, musical key detect, key detect, hpcp, song
project-urls =
    Documentation = https://jmaldon1.github.io/Musher/index.html
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False

[pbr]
# Dont generate an AUTHORS file
skip_authors = True
# Dont generate a MANIFEST.in
skip_git_sdist = True