[metadata]
# Version: setuptools_scm finds version from github tags
name = musher
author = Joshua Maldonado, Brian Silver
author-email = joshjm9915@gmail.com
summary = Simple musical key detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmaldon1/Musher
license = MIT
keywords = music, musical key detect, key detect, hpcp, song
project-urls =
    Documentation = https://jmaldon1.github.io/Musher/index.html
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find:
